# Aircraft_Landing_Verification

./: .gitignore  .gitmodules  README.md  tmp1.py  visualization.py
airport_sim/: CMakeLists.txt  README.md  package.xml
airport_sim/config/: dynamic_light_load_config.yaml
airport_sim/doc/: manifest.yaml
airport_sim/doc/html/: ____init_____8py.html  ____init_____8py_source.html  annotated.html  classes.html  classsrc_1_1dynamic__light__loader_1_1DynamicLightLoader-members.html  classsrc_1_1dynamic__light__loader_1_1DynamicLightLoader.html  classsrc_1_1position__checker_1_1PositionChecker-members.html  classsrc_1_1position__checker_1_1PositionChecker.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dynamic__light__loader_8py.html  dynamic__light__loader_8py_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index-msg.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespacesrc.html  namespacesrc_1_1dynamic__light__loader.html  namespacesrc_1_1position__checker.html  namespacesrc_1_1utils.html  position__checker_8py.html  position__checker_8py_source.html  utils_8py.html  utils_8py_source.html
airport_sim/gazebo/models/airport_ground_plane/: model.config  model.sdf
airport_sim/gazebo/models/airport_ground_plane/materials/scripts/: airport_ground_plane.material
airport_sim/gazebo/models/blue_light/: model.config  model.sdf
airport_sim/gazebo/models/green_light/: model.config  model.sdf
airport_sim/gazebo/models/red_light/: model.config  model.sdf
airport_sim/gazebo/worlds/: airport_day.world  airport_night.world  runway.sdf  runway2.world  test.world
airport_sim/launch/: airport.launch
airport_sim/src/: dynamic_light_loader.py  position_checker.py  utils.py
airport_sim/src/__pycache__/: position_checker.PositionChecker.__check_lights_boost-76.py38.1.nbc  position_checker.PositionChecker.__check_lights_boost-76.py38.2.nbc  position_checker.PositionChecker.__check_lights_boost-76.py38.nbi
landing_devel/: agent_aircraft.py  aircraft_controller.py  aircraft_dynamics.py  aircraft_model.py  aircraft_mpc.py  aircraft_simulator.py  averaged_states.npy  compare_distribution.py  error_analysis.py  estimation.npy  ground_truth.npy  img_collect.py  nominal_states.npy  ref_states.npy  state_estimator_collect.py  state_estimator_collect2.py  surrogate_model_06-05_lighting.pth  surrogate_test.py  surrogate_test_pytorch.py  surrogate_train.py  surrogate_train_pytorch.py  update_pos.py  update_pos2.py  vision_based_simulation.py  vision_pipeline_debug.py
landing_devel/NeuReach/: NeuReach_autoland.py  NeuReach_autoland2.py  NeuReach_autoland3.py  NeuReach_autoland4.py  NeuReach_autoland5.py  NeuReach_onestep_rect.py  cmd.txt  data.py  model.py  normalize_data.py  partition_data_by_env.py  res_vis.py  res_vis2.py  res_vis3.py  res_vis4.py  res_vis5.py  segment_data.py  test.py
landing_devel/NeuReach/log/: checkpoint.pth.tar  checkpoint_1.pth.tar  checkpoint_1_06-17.pth.tar  checkpoint_1_06-19.pth.tar  checkpoint_1_065_to_075.pth.tar  checkpoint_1_075_to_085.pth.tar  checkpoint_1_085_to_095.pth.tar  checkpoint_1_095_to_105.pth.tar  checkpoint_2_06-19.pth.tar  checkpoint_2_065_to_075.pth.tar  checkpoint_2_075_to_085.pth.tar  checkpoint_2_095_to_105.pth.tar  checkpoint_3_065_to_075.pth.tar  checkpoint_3_075_to_085.pth.tar  checkpoint_3_085_to_095.pth.tar  checkpoint_4_06-19.pth.tar  checkpoint_4_095_to_105.pth.tar  checkpoint_5_06-19.pth.tar  checkpoint_5_065_to_075.pth.tar  (+32 more)
landing_devel/NeuReach2/: NeuReach_autoland1.py  NeuReach_autoland2.py  augmentation_test.py  autoland_system.py  data.py  data5.pickle  data_eval.pickle  data_eval3.pickle  data_eval4.pickle  data_eval5.pickle  data_eval_exp1.pickle  data_grounding_exp1.pickle  generate_model.sh  model.py  model_prototype.py  rostest.py  test_perception_contract.py  visualize_contract.py  visualize_data.py
landing_devel/NeuReach3/: aircraft.py  contraction_metric.py  data.txt  int_test.py  lipschitz_estimate.py  test.py
landing_devel/data/: data.txt  data_verif.txt
landing_devel/estimation_label/: label.txt  label2_055_to_065.npy  label2_065_to_075.npy  label2_075_to_085.npy  label2_085_to_095.npy  label2_095_to_105.npy  label_test.txt  label_verif.txt
landing_devel/surrogate_model/: model.keras
magicc_sim/: CMakeLists.txt  package.xml
magicc_sim/agents/junker/: Param.py  Trim.py  junker.xacro
magicc_sim/agents/mikey/: mikey.xacro
magicc_sim/agents/myTwinDream/: myTwinDream.xacro
magicc_sim/agents/shredder/: shredder_base.xacro
magicc_sim/agents/visuals/: Millennium_Falcon.xacro  c130.xacro  firefly.xacro  hummingbird.xacro  ju_87.xacro  pelican.xacro  propeller_ccw.xacro  propeller_cw.xacro  x_wing.xacro
magicc_sim/doc/: simulation.tex
magicc_sim/launch/: view_mesh.launch  view_world.launch
magicc_sim/meshes/: Millennium_Falcon.dae  c130.dae  x_wing.dae
magicc_sim/models/grass_plane_1/: model.config  model.sdf
magicc_sim/models/grass_plane_2/: model.config  model.sdf
magicc_sim/models/heightmap_1/: model.config  model.sdf
magicc_sim/models/heightmap_2/: model.config  model.sdf
magicc_sim/models/heightmap_3/: model.config  model.sdf
magicc_sim/worlds/: better_crazy_world.sdf  course.world  crazy_world.sdf  cylinders.world  hilly_town_1.world  mocap_room.world  powerplant.world  smaller_crazy_world.sdf  test_city.world  valley_town_1.world  valley_town_2.world
magicc_sim_plugins/: CMakeLists.txt  package.xml
magicc_sim_plugins/include/magicc_sim_plugins/: autolevel_plugin.h  common.h  gazebo_ros_camera_utils.h  gimbal_plugin.h  gz_compat.h  step_camera.h  world_utilities.h
magicc_sim_plugins/src/: autolevel_plugin.cpp  gazebo_ros_camera.cpp  gazebo_ros_camera_utils.cpp  gimbal_plugin.cpp  step_camera.cpp  world_utilities.cpp
magicc_sim_plugins/xacro/: camera.xacro  gimbal.xacro  laser_scanner.xacro  rgbd.xacro  step_camera.xacro  velodyne.xacro
rosplane_sim/launch/: fixedwing.launch  spawn_mav.launch
rosplane_sim/xacro/: fixedwing.xacro
(+149 files in other folders)
