<package>
  <name>magicc_sim_plugins</name>
  <version>2.0.1</version>
  <description>The magicc_sim_plugins package</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <author>James Jackson</author>
  <author>Gary Ellingson</author>
  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author> 

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>magicc_sim</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>magicc_sim</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>relative_nav</build_depend>
  <build_depend>rosflight_msgs</build_depend>
  <build_depend>rosflight_utils</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>polled_camera</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visual_mtt</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>magicc_sim</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>relative_nav</run_depend>
  <run_depend>rosflight_msgs</run_depend>
  <run_depend>rosflight_utils</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>polled_camera</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visual_mtt</run_depend>

</package>
